deployment/serverless/todo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: todo
  template:
    metadata:
      labels:
        app: todo
    spec:
      containers:
        - name: server
          image: sstralenia/todo-noserver:41f39e19aeaa35aa8571791532c0da7aa6bf40c8
          ports:
            - name: web
              containerPort: 3000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /health
              port: web
              httpHeaders:
            initialDelaySeconds: 3
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /health
              port: web
              httpHeaders:
            initialDelaySeconds: 3
            periodSeconds: 5
