deployment/serverless/todo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-service
spec:
  type: NodePort
  selector:
    app: todo
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30007
