deployment/serverless/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: todo-ingress
spec:
  backend:
    serviceName: todo-service
    servicePort: 3000
